updated package configuration and CMake for noetic compile; updated travis config file

--- a/laser_joint_projector/package.xml
+++ b/laser_joint_projector/package.xml
@@ -29,7 +29,7 @@
   <run_depend>roscpp_serialization</run_depend>
   <run_depend>calibration_msgs</run_depend>
   <run_depend>kdl_parser</run_depend>
-  <run_depend>liborocos-kdl-ev/run_depend>
+  <run_depend>liborocos-kdl-dev</run_depend>
   <run_depend>geometry_msgs</run_depend>
 
   <!-- Dependencies needed only for running tests. -->
